--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,13 @@
 
     RewriteEngine On
 
+    RewriteCond %{HTTP:X-forwarded-Proto} =http[OR]
+    RewriteCond %{HTTP:X-forwarded-Proto} =""
+    RewriteCond %{HTTPS}  ≠ on
+    RewriteRule ^ http://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
